--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -31,7 +31,14 @@
     <DebugType>none</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <ExcludeFilesFromDeployment>bin\\*.dll.config</ExcludeFilesFromDeployment>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <AllowedReferenceRelatedFileExtensions>
+      <!-- Prevent default XML and PDB files copied to output in RELEASE. 
+           Only *.allowedextension files will be included, which doesn't exist in my case.
+       -->
+      .allowedextension
+    </AllowedReferenceRelatedFileExtensions>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="accoremgd">
@@ -49,8 +56,6 @@
     <Reference Include="DocumentFormat.OpenXml, Version=2.0.5022.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="RddXmlLib">
       <HintPath>..\..\..\7.CompareRddXml\CompOrderRddLib\bin\Release\RddXmlLib.dll</HintPath>
     </Reference>
@@ -62,30 +67,17 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AcadSL.cs" />
-    <Compile Include="AcadTools.cs" />
     <Compile Include="Blocks.cs" />
     <Compile Include="Calc.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="CRs.cs" />
-    <Compile Include="Elements\Elements.cs" />
-    <Compile Include="Elements\Point.cs" />
-    <Compile Include="Elements\SigLayout.cs" />
-    <Compile Include="Elements\SspSimp.cs" />
     <Compile Include="Excel.cs" />
     <Compile Include="Export.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="FrmStation2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmStation2.Designer.cs">
-      <DependentUpon>FrmStation2.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrmStation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,17 +85,15 @@
       <DependentUpon>FrmStation.cs</DependentUpon>
     </Compile>
     <Compile Include="Init.cs" />
-    <Compile Include="InputData.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="MyAcadCommands.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs" />
+    <Compile Include="SspSimp.cs" />
     <Compile Include="WirteData.cs" />
     <Compile Include="Word.cs" />
-    <Compile Include="WordOpenXML.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <Content Include="BalAtt.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -127,9 +117,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="FrmStation2.resx">
-      <DependentUpon>FrmStation2.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FrmStation.resx">
       <DependentUpon>FrmStation.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,15 +137,6 @@
       <VersionMinor>5</VersionMinor>
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="VBIDE">
-      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
-      <VersionMajor>5</VersionMajor>
-      <VersionMinor>3</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
