AC sections calculations form SL added. Auto Dps and elements from SL not from attributes.

--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -71,6 +71,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcSection.cs" />
     <Compile Include="Blocks.cs" />
     <Compile Include="Calc.cs" />
     <Compile Include="Constants.cs" />
