--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -106,7 +106,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="LinesDef.dat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="MainTracks.dat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
