--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -75,7 +75,14 @@
     <Compile Include="Blocks.cs" />
     <Compile Include="Calc.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="ControlKm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ControlKm.designer.cs">
+      <DependentUpon>ControlKm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CRs.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="Excel.cs" />
     <Compile Include="Export.cs" />
     <Compile Include="Extensions.cs" />
@@ -88,6 +95,7 @@
     <Compile Include="Init.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="MyAcadCommands.cs" />
+    <Compile Include="Palette.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs" />
     <Compile Include="SspSimp.cs" />
@@ -119,6 +127,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ControlKm.resx">
+      <DependentUpon>ControlKm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmStation.resx">
       <DependentUpon>FrmStation.cs</DependentUpon>
     </EmbeddedResource>
