--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@
 *.userosscache
 *.sln.docstates
 
+#exe files
+*.exe
+
+#dwg files
+*.dwg
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
