Initial commit - auto danger points added.

--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Blocks.cs" />
     <Compile Include="Calc.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="DangerPoint.cs" />
     <Compile Include="ElementsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
