--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -71,6 +71,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcadTools.cs" />
     <Compile Include="AcSection.cs" />
     <Compile Include="Blocks.cs" />
     <Compile Include="Calc.cs" />
