--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -114,7 +114,6 @@
       <DependentUpon>FrmStation.cs</DependentUpon>
     </Compile>
     <Compile Include="Init.cs" />
-    <Compile Include="Logging.cs" />
     <Compile Include="MyAcadCommands.cs" />
     <Compile Include="Palette.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -183,6 +182,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\9.Logger\Logger\Logger.csproj">
+      <Project>{220c1cd1-6b9a-42aa-9d1e-e1c51b1a0d69}</Project>
+      <Name>Logger</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
