Postbuild clear log folder

--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -195,6 +195,8 @@
     <PostBuildEvent>if not exist $(TargetDir)\log mkdir $(TargetDir)\log
 if not exist $(TargetDir)\drv mkdir $(TargetDir)\drv
 if not exist $(TargetDir)\doc mkdir $(TargetDir)\doc
+cd $(TargetDir)\log
+del *.log
 xcopy /Y $(SolutionDir)AccessDatabaseEngine_X64.exe $(TargetDir)\drv
 xcopy /Y $(SolutionDir)mso.reg $(TargetDir)\drv
 xcopy /Y C:\3.TRDD\DynamicBlocks\Blks_Dynamic.dwg $(TargetDir)\cfg
