--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -177,6 +177,9 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="cfg\ConnLinesKm1.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
