--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -117,6 +117,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Register.cs" />
+    <Compile Include="SearchDP.cs" />
+    <Compile Include="SearchBG.cs" />
     <Compile Include="SearchSegment.cs" />
     <Compile Include="ShiftCesBG.cs" />
     <Compile Include="SspSimp.cs" />
