--- a/ExpPT1.csproj
+++ b/ExpPT1.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="Excel.cs" />
     <Compile Include="Export.cs" />
+    <Compile Include="ExpTdlPt.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FrmStation.cs">
       <SubType>Form</SubType>
