--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.11.3" targetFramework="net472" />
   <package id="Fody" version="6.2.0" targetFramework="net472" developmentDependency="true" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net472" />
 </packages>
